[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viaje-ya"
version = "0.3.0"
description = "Viaje-Ya microservice backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Viaje-Ya" }]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]